# HW8

./: config.ini  connect.py  content.py  creat_collsfrom_docs.py  expl.py  models.py  pyproject.toml  query.py  quotes.json  upload_js.py
