[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["ZhannaBalieieva <thebestofthebestv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
